[RLS] Ignore fixed when applying root scroll offset for interest rect

This patch fixes a regression from [1] where
MapToVisualRectInAncestorSpaceInternal was changed to not apply a
counterscroll offset for fixed position descendants. Interest rect
calculations incorrectly relied on this behavior.

MapToVisualRectInAncestorSpace is exclusive of the clip and scroll on
the ancestor object. To account for this, the interest rect logic would
call MapToVisualRectInAncestorSpace and then apply the root clip and
scroll offset, but this is not correct if there are fixed-position
children.

This patch updates the callsite to MapToVisualRectInAncestorSpace to
map to nullptr instead of the root view which will include the layout
view's clip and scroll.

[1] http://crrev.com/27f3487497 [formerly e931d2aecb]

Bug: 838111, 831380, 840504
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I14b023279ef58e0123febae367a2ea0c67733c50
Reviewed-on: https://chromium-review.googlesource.com/1047193
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557066}
Former-commit-id: cfebac612b10fdf961dca9df2bb28581577a612a